[project]
name="pyramid_tdom"
dynamic = ["version"]
dependencies = [
    "pyramid",
    "tdom",
]
requires-python = ">= 3.14"
description = "Pyramid renderer for TDOM."
authors = [
  {name = "Ian Wilson", email = "ian@gardentheory.com"}
]
readme="README.rst"
license="MIT"

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0+unknown"

[tool.hatch.build.hooks.versioningit-onbuild]
source-file="src/pyramid_tdom/__about__.py"
build-file="pyramid_tdom/__about__.py"
